There are several changes included in this commit that are related to the two tickets referenced below.
From DFDL-1144
Variables set on the command line using the -D switch are now passed to the processer when using a saved parser.

From DFDL-952
The following CLI tests are now passing
	test_2358_CLI_Parsing_SimpleParse_stdOut_extVars
	test_1585_CLI_Parsing_MultifileSchema_methodImportSameDir
	test_1971_CLI_Parsing_traceMode01

The following namespace tests are now passing
	test_combinations_03
	test_combinations_04
	test_namespace_scope_02
	test_namespace_ultra_uniqueness_01
	test_namespace_ultra_uniqueness_02
	test_namespace_ultra_uniqueness_03
	test_namespace_ultra_uniqueness_04

There were problems executing the CLI tests on Windows which required multiple changes:
	The tests did not always take into account the difference in path separators for Linix and Windows.
		CLI commands are now defined dynamically using the appropiate path separators.

	The CLI commands used Linix style line endings and did not execute under Windows.
		CLI commands now use system defined line endings.

	The saved test results data was normalized to use Linix style line endings.
		While most test output contained Linux line endings (even on Windows)
		certain tests involving regular expressions generated Windows style line endings.
		Added an InputFilter to the ExpectBuilder to normalize test output
		to Linux style line endings.
		Also updated the ExpectBuilder to the latest version.

	Dubugging tests were not executing under Windows and especially under Eclipse
		due to the use of a non-interactive console.
		Set the DAFFODIL_JAVA_OPTS environment variable for Debugger tests to specify
		the use of an unsupported terminal:  -Djline.terminal=jline.UnsupportedTerminal
		Also added a Java option to specify the character encoding:  -Dfile.encoding=UTF-8
		Also updated the JLine library to the latest version.

DFDL-1144
DFDL-952